// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusBar renders two items all ok snapshot 1`] = `
<div
  className="Statusbar"
>
  <section
    className="Statusbar-panel err-warn"
  >
    <div
      className="err-warn-item err-warn-item--error"
    >
      <svg
        className="icon "
      >
        error.svg
      </svg>
      <p>
        <span
          className="count"
        >
          0
        </span>
         error
        s
      </p>
    </div>
    <div
      className="err-warn-item"
    >
      <svg
        className="icon "
      >
        warning.svg
      </svg>
      <p>
        <span
          className="count"
        >
          0
        </span>
         warning
        s
      </p>
    </div>
  </section>
  <section
    className="Statusbar-panel statusMsg"
  >
    <p
      className="statusMsg-item"
    >
      Building: vigoda
    </p>
    <p
      className="statusMsg-item statusMsg-item--last-edit"
    >
      <span
        className="label"
      >
        Last Edit:
      </span>
      <span
        className="file"
      >
        main.go [+ 2 more]
      </span>
    </p>
  </section>
  <section
    className="Statusbar-panel progress"
  >
    <p>
      <span
        className="current"
      >
        0
      </span>
      /
      2
       running
    </p>
    <svg
      className="icon--logo"
    >
      logo.svg
    </svg>
  </section>
</div>
`;

exports[`StatusBar renders two items both errors snapshot 1`] = `
<div
  className="Statusbar"
>
  <section
    className="Statusbar-panel err-warn"
  >
    <div
      className="err-warn-item err-warn-item--error"
    >
      <svg
        className="icon icon--error"
      >
        error.svg
      </svg>
      <p>
        <span
          className="count"
        >
          2
        </span>
         error
        s
      </p>
    </div>
    <div
      className="err-warn-item"
    >
      <svg
        className="icon "
      >
        warning.svg
      </svg>
      <p>
        <span
          className="count"
        >
          0
        </span>
         warning
        s
      </p>
    </div>
  </section>
  <section
    className="Statusbar-panel statusMsg"
  >
    <p
      className="statusMsg-item"
    >
      Build failed: vigoda
    </p>
    <p
      className="statusMsg-item statusMsg-item--last-edit"
    >
      <span
        className="label"
      >
        Last Edit:
      </span>
      <span
        className="file"
      >
        main.go [+ 1 more]
      </span>
    </p>
  </section>
  <section
    className="Statusbar-panel progress"
  >
    <p>
      <span
        className="current"
      >
        0
      </span>
      /
      2
       running
    </p>
    <svg
      className="icon--logo"
    >
      logo.svg
    </svg>
  </section>
</div>
`;

exports[`StatusBar renders without crashing 1`] = `
<div
  className="Statusbar"
>
  <section
    className="Statusbar-panel err-warn"
  >
    <div
      className="err-warn-item err-warn-item--error"
    >
      <svg
        className="icon "
      >
        error.svg
      </svg>
      <p>
        <span
          className="count"
        >
          0
        </span>
         error
        s
      </p>
    </div>
    <div
      className="err-warn-item"
    >
      <svg
        className="icon "
      >
        warning.svg
      </svg>
      <p>
        <span
          className="count"
        >
          0
        </span>
         warning
        s
      </p>
    </div>
  </section>
  <section
    className="Statusbar-panel statusMsg"
  >
    <p
      className="statusMsg-item"
    >
      
    </p>
    <p
      className="statusMsg-item statusMsg-item--last-edit"
    >
      <span
        className="label"
      >
        Last Edit:
      </span>
      <span
        className="file"
      >
        —
      </span>
    </p>
  </section>
  <section
    className="Statusbar-panel progress"
  >
    <p>
      <span
        className="current"
      >
        0
      </span>
      /
      0
       running
    </p>
    <svg
      className="icon--logo"
    >
      logo.svg
    </svg>
  </section>
</div>
`;
